# orca

./: .gitignore  Cargo.toml  README.md
manifests/: orca-demo-pack.yaml
src/: app.rs  cli.rs  config.rs  input.rs  k8s.rs  main.rs  model.rs  ui.rs
