[package]
name = "orca"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.43", features = ["clock", "std"] }
clap = { version = "4.5.60", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
k8s-openapi = { version = "0.27.0", features = ["latest"] }
kube = { version = "3.0.1", features = ["runtime", "derive"] }
portable-pty = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
vt100 = "0.16.2"
